--- a/SMASH.html
+++ b/SMASH.html
@@ -3,10 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>document</title>
     <link rel="stylesheet" href="smash.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
 </head>
 <body>
-    
+    <header>
+        <div class="head">
+            <div class="head1">
+                <img src="https://www.smashingmagazine.com/images/logo/logo.svg">
+            </div>
+            <div class="head1">Articles</div>
+            <div class="head1">Guides</div>
+            <div class="head1">Books</div>
+            <div class="head1">Workshop</div>
+            <div class="head1">Membership</div>
+            <div class="head1">
+                More<i class="fas fa-cat"></i>
+            </div>
+            <div class="head1">
+                <form class="form1">
+                    <input type="text" placeholder="Search articles...">
+                </form>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
