Finish Header negr

--- a/SMASH.html
+++ b/SMASH.html
@@ -1,32 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>document</title>
     <link rel="stylesheet" href="smash.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
+        integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
 </head>
+
 <body>
-    <header>
-        <div class="head">
+    <div class="ctn">
+        <header>
             <div class="head1">
-                <img src="https://www.smashingmagazine.com/images/logo/logo.svg">
+                <img class="smash" src="https://assets.stickpng.com/thumbs/58482e1fcef1014c0b5e4a66.png">
             </div>
-            <div class="head1">Articles</div>
-            <div class="head1">Guides</div>
-            <div class="head1">Books</div>
-            <div class="head1">Workshop</div>
-            <div class="head1">Membership</div>
-            <div class="head1">
+            <div class="head1 cat1">Articles</div>
+            <div class="head1 cat2">Guides</div>
+            <div class="head1 cat3">Books</div>
+            <div class="head1 cat4">Workshop</div>
+            <div class="head1 cat5">Membership</div>
+            <div class="head1 head12">
                 More<i class="fas fa-cat"></i>
             </div>
-            <div class="head1">
+            <div class="head1 search">
                 <form class="form1">
+                    <i class="fas fa-search"></i>
                     <input type="text" placeholder="Search articles...">
                 </form>
             </div>
+        </header>
+        <div class="negr">
+            <div class="don">
+                <div class="dondon">
+                    <div class="don1">
+                        <a href="#">Daniel Don</a> wrote
+                    </div>
+                    <div class="don-img">
+                        <img src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/ed353cc5-6784-4a7e-ba6b-3fef3063ec83/valeriia-panina-200x200.jpg"
+                            alt="">
+                        <span class="don-right">
+                            <a href="#">Reactive Variables In GraphQL Apollo Client</a>
+                        </span>
+                    </div>
+                    <div class="don-bot">
+                        NOV 27, 2020 in <a href="#">React, JavaScript</a>
+                    </div>
+                    <div class="par">Reactive variables work with GraphQL Apollo and offer you the same functionality
+                        with Redux or Context API without the complexity or extra layers that come with these other
+                        tools. A reactive variable in GraphQL Apollo is easy to use and doesn’t have as much setup
+                        process compared to Redux.
+                    </div>
+                </div>
+                <div class="conti">
+                    Cotinue reading<i class="fas fa-long-arrow-alt-right"></i>
+                </div>
+                <div class="valer">
+                    <div class="valer1">
+                        <a href="#">Valeria Panina</a>
+                        <span class="don-bot2">/NOV 27, 2020 in <a href="#">React, JavaScript</a></span>
+                    </div>
+                    <div class="valer-img">
+                        <img src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/60fa5fa8-c6aa-4076-9be0-52642f090607/daniel-don-200x200.jpg"
+                            alt="">
+                        <span class="valer-right">
+                            <a href="#">Copy Docs: Make Your Microcopy Full Lorem ipsum dolor sit amet. And Consistent,
+                                And Maintain It</a>
+                        </span>
+                    </div>
+                </div>
+                <div class="valer">
+                    <div class="valer1">
+                        <a href="#">Jheny Tompkins</a>
+                        <span class="don-bot2">/NOV 27, 2020 in <a href="#">React, JavaScript</a></span>
+                    </div>
+                    <div class="valer-img">
+                        <img src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/84dfa22c-afec-4220-a11f-49fe185c7236/jhey-tompkins-200x200-opt.jpg"
+                            alt="">
+                        <span class="valer-right">
+                            <a href="#">Playfulness In Code: Supercharge Your Learning By Having Fun</a>
+                        </span>
+                    </div>
+                </div>
+                <div class="see">
+                    SEE ALL LATEST ARTICLES<i class="fas fa-long-arrow-alt-right"></i>
+                </div>
+            </div>
+            <div class="joker">
+                <div class="joker1">
+                    <img src="https://www.smashingmagazine.com/images/smashing-cat/workshop-explorer.svg" alt="">
+                    <button class="button1">Online Workshop</button>
+                    <div class="joker2">
+                        Boost your skills live, with our front-end & UX workshops.
+                    </div>
+                    <div class="joker3">
+                        Soon: <a href="#">Smart Interface Design Patterns</a> with Vitaly Friedman and <a
+                            href="#">Building a Design System</a> with Andy Bell.
+                    </div>
+                    <button class="button2">
+                        Jump to all <br> Workshops<i class="fas fa-long-arrow-alt-right"></i>
+                    </button>
+                    <div class="joker4">
+                        <a href="#">2.5h live sessions,</a> with video recordings and Q&A.
+                    </div>
+                </div>
+            </div>
         </div>
-    </header>
+    </div>
 </body>
+
 </html>
