--- a/SMASH.html
+++ b/SMASH.html
@@ -107,6 +107,250 @@
                 </div>
             </div>
         </div>
+        <div class="big-div">
+            <div class="testing">
+                <div class="vue">
+                    <div class="days">
+                        4 days ago
+                    </div>
+                    <div class="app">
+                        Testing Veu Applications With the Vue Testing Library
+                    </div>
+                    <div class="omer">
+                        by Kelvin Omereshone
+                    </div>
+                    <div class="text">
+                        In JavaScript, there are two mains ways to handle asynchrnours code: then/catch (AS6) and
+                        asynti/await (ES7).
+                        This Syntacsis give us the same underlining functionallu, they affect readability and scope
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dolorem. in differint ways.
+                        In this article, we will see how one syntax Lorem ipsum dolor sit amet consectetur adipisicing
+                        elit. Officiis, animi? lends itself to maintainable code, while the other put us on the road to
+                        callback hell!
+                    </div>
+                    <div class="long1 long">
+                        <i class="fas fa-long-arrow-alt-right"></i>
+                    </div>
+                </div>
+                <div class="vue">
+                    <div class="days">
+                        10 minutes ago
+                    </div>
+                    <div class="app">
+                        A Throughfull Way To Use React's Hook
+                    </div>
+                    <div class="omer">
+                        by Aleem Isiaka
+                    </div>
+                    <div class="text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, ab. In JavaScript, there are two
+                        mains ways to handle asynchrnours code: then/catch (AS6) and Lorem ipsum dolor, sit amet
+                        consectetur adipisicing elit. Tenetur, tempore! Lorem ipsum dolor sit, amet consectetur
+                        adipisicing elit. Omnis, laborum. asynti/await (ES7).
+                        This Syntacsis give us the same underlining functionallu, they affect readability and scope in
+                        differint ways. In this article, we will see how one syntax lends itself to maintainable code,
+                        while the other put us on the road to callback hell!
+                    </div>
+                    <div class="long2 long">
+                        <i class="fas fa-long-arrow-alt-right"></i>
+                    </div>
+                </div>
+                <div class="vue">
+                    <div class="days">
+                        3 hours ago
+                    </div>
+                    <div class="app">
+                        A Cmpariasion Veu Applications With the Vue Versus
+                    </div>
+                    <div class="omer">
+                        by Bret Cameron
+                    </div>
+                    <div class="text">
+                        Ipsum dolor sit amet consectetur adipisicing elit. Iusto maxime neque laboriosam molestias
+                        repellendus recusandae alias voluptas provident aut modi. In JavaScript, there are two mains
+                        ways to handle asynchrnours code: then/catch (AS6) and asynti/await (ES7).
+                        This Syntacsis give us the same underlining functionallu, they affect readability and scope in
+                        differint ways. In this article, we will see how one syntax lends itself to maintainable code,
+                        while the other put us on the road to callback hell!
+                    </div>
+                    <div class="long3 long">
+                        <i class="fas fa-long-arrow-alt-right"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="pishak">
+                <div class="hopen">
+                    <div class="our">
+                        Our friends and supporters<i class="fas fa-long-arrow-alt-down"></i>
+                    </div>
+                    <div class="hopin1">
+                        <div class="imgh">
+                            <img src="https://cats.smashing.services/catch?uri=https://res.cloudinary.com/indysigner/image/upload/v1604587336/ads/HopinLogo.svg"
+                                alt="">
+                        </div>
+                        <div class="ph">
+                            Learn how event teams are using Hopin to delight their attendees, speakers, and sponsors.
+                        </div>
+                        <button class="bh">CREATE EVENT</button>
+                    </div>
+                </div>
+                <div class="join">
+                    <img src="https://www.smashingmagazine.com/images/smashing-cat/highlight-member.svg" alt="">
+                    <div class="member">
+                        Join 1,699 Smashing Members
+                    </div>
+                    <div class="friend">
+                        A <span>friendly community</span> for people who design and build the web. With books,
+                        workshops, goodies and early-birds — for just 1 coffee a month. <a href="#">Take a look
+                            around.</a>
+                    </div>
+                    <button class="bjoin">Join the comunity<i class="fas fa-fighter-jet"></i></button>
+                    <div class="alre">
+                        Already have an account? <a href="#">Sign in!</a>
+                    </div>
+                </div>
+            </div>
+            <div class="testing">
+                <div class="vue">
+                    <div class="days">
+                        4 days ago
+                    </div>
+                    <div class="app">
+                        Testing Veu Applications With the Vue Testing Library
+                    </div>
+                    <div class="omer">
+                        by Kelvin Omereshone
+                    </div>
+                    <div class="text">
+                        In JavaScript, there are two mains ways to handle asynchrnours code: then/catch (AS6) and
+                        asynti/await (ES7).
+                        This Syntacsis give us the same underlining functionallu, they affect readability and scope
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum quis aut consequuntur dicta rem
+                        veritatis accusantium libero sapiente! Esse, nihil. in differint ways. In this article, we will
+                        see how one syntax lends itself to maintainable code, while the other put us on the road to
+                        callback hell!
+                    </div>
+                    <div class="long1 long">
+                        <i class="fas fa-long-arrow-alt-right"></i>
+                    </div>
+                </div>
+                <div class="vue">
+                    <div class="days">
+                        10 minutes ago
+                    </div>
+                    <div class="app">
+                        A Throughfull Way To Use React's Hook
+                    </div>
+                    <div class="omer">
+                        by Aleem Isiaka
+                    </div>
+                    <div class="text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, ab. In JavaScript, there are two
+                        mains ways to handle asynchrnours code: then/catch Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit. Dolor omnis dignissimos sit repellat neque aperiam aliquid hic vero debitis
+                        ipsum? (AS6) and asynti/await (ES7).
+                        This Syntacsis give us the same underlining functionallu, they affect readability and scope in
+                        differint ways. In this article, we will see how one syntax lends itself to maintainable code,
+                        while the other put us on the road to callback hell!
+                    </div>
+                    <div class="long2 long">
+                        <i class="fas fa-long-arrow-alt-right"></i>
+                    </div>
+                </div>
+                <div class="vue">
+                    <div class="days">
+                        3 hours ago
+                    </div>
+                    <div class="app">
+                        A Cmpariasion Veu Applications With the Vue Versus
+                    </div>
+                    <div class="omer">
+                        by Bret Cameron
+                    </div>
+                    <div class="text">
+                        Ipsum dolor sit amet consectetur adipisicing elit. Iusto maxime neque laboriosam molestias
+                        repellendus recusandae alias voluptas provident aut modi. In JavaScript, there are two mains
+                        ways to handle asynchrnours code: then/catch (AS6) and asynti/await (ES7).
+                        This Syntacsis give us the same underlining functionallu, they affect readability and scope in
+                        differint ways. In this article, we will see how one syntax lends itself to maintainable code,
+                        while the other put us on the road to callback hell!
+                    </div>
+                    <div class="long3 long">
+                        <i class="fas fa-long-arrow-alt-right"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="testing">
+                <div class="vue">
+                    <div class="days">
+                        4 days ago
+                    </div>
+                    <div class="app">
+                        Testing Veu Applications With the Vue Testing Library
+                    </div>
+                    <div class="omer">
+                        by Kelvin Omereshone
+                    </div>
+                    <div class="text">
+                        In JavaScript, there are two mains ways to handle asynchrnours code: then/catch (AS6) and
+                        asynti/await (ES7).
+                        This Syntacsis give us the same underlining functionallu, they affect readability and scope.
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore, quaerat? Similique est commodi
+                        impedit natus. Quis perferendis quas quos expedita. in differint ways. In this article, we will
+                        see how one syntax lends itself to maintainable code, while the other put us on the road to
+                        callback hell!
+                    </div>
+                    <div class="long1 long">
+                        <i class="fas fa-long-arrow-alt-right"></i>
+                    </div>
+                </div>
+                <div class="vue">
+                    <div class="days">
+                        10 minutes ago
+                    </div>
+                    <div class="app">
+                        A Throughfull Way To Use React's Hook
+                    </div>
+                    <div class="omer">
+                        by Aleem Isiaka
+                    </div>
+                    <div class="text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, ab. In JavaScript, there are two
+                        mains ways to handle asynchrnours code: then/catch (AS6) and asynti/await (ES7).
+                        This Syntacsis give us the same. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos,
+                        eius necessitatibus corporis esse maxime illum omnis! Quos debitis incidunt perspiciatis.
+                        underlining functionallu, they affect readability and scope in differint ways. In this article,
+                        we will see how one syntax lends itself to maintainable code, while the other put us on the road
+                        to callback hell!
+                    </div>
+                    <div class="long2 long">
+                        <i class="fas fa-long-arrow-alt-right"></i>
+                    </div>
+                </div>
+                <div class="vue">
+                    <div class="days">
+                        3 hours ago
+                    </div>
+                    <div class="app">
+                        A Cmpariasion Veu Applications With the Vue Versus
+                    </div>
+                    <div class="omer">
+                        by Bret Cameron
+                    </div>
+                    <div class="text">
+                        Ipsum dolor sit amet consectetur adipisicing elit. Iusto maxime neque laboriosam molestias
+                        repellendus recusandae alias voluptas provident aut modi. In JavaScript, there are two mains
+                        ways to handle asynchrnours code: then/catch (AS6) and asynti/await (ES7).
+                        This Syntacsis give us the same underlining functionallu, they affect readability and scope in
+                        differint ways. In this article, we will see how one syntax lends itself to maintainable code,
+                        while the other put us on the road to callback hell!
+                    </div>
+                    <div class="long3 long">
+                        <i class="fas fa-long-arrow-alt-right"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
