Finish class=meet

--- a/SMASH.html
+++ b/SMASH.html
@@ -83,9 +83,6 @@
                         </span>
                     </div>
                 </div>
-                <div class="see">
-                    SEE ALL LATEST ARTICLES<i class="fas fa-long-arrow-alt-right"></i>
-                </div>
             </div>
             <div class="joker">
                 <div class="joker1">
@@ -106,6 +103,9 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="see">
+            SEE ALL LATEST ARTICLES→
         </div>
         <div class="big-div">
             <div class="testing">
@@ -129,7 +129,7 @@
                         callback hell!
                     </div>
                     <div class="long1 long">
-                        <i class="fas fa-long-arrow-alt-right"></i>
+                        →
                     </div>
                 </div>
                 <div class="vue">
@@ -152,7 +152,7 @@
                         while the other put us on the road to callback hell!
                     </div>
                     <div class="long2 long">
-                        <i class="fas fa-long-arrow-alt-right"></i>
+                        →
                     </div>
                 </div>
                 <div class="vue">
@@ -174,7 +174,7 @@
                         while the other put us on the road to callback hell!
                     </div>
                     <div class="long3 long">
-                        <i class="fas fa-long-arrow-alt-right"></i>
+                        →
                     </div>
                 </div>
             </div>
@@ -231,7 +231,7 @@
                         callback hell!
                     </div>
                     <div class="long1 long">
-                        <i class="fas fa-long-arrow-alt-right"></i>
+                        →
                     </div>
                 </div>
                 <div class="vue">
@@ -254,7 +254,7 @@
                         while the other put us on the road to callback hell!
                     </div>
                     <div class="long2 long">
-                        <i class="fas fa-long-arrow-alt-right"></i>
+                        →
                     </div>
                 </div>
                 <div class="vue">
@@ -276,7 +276,7 @@
                         while the other put us on the road to callback hell!
                     </div>
                     <div class="long3 long">
-                        <i class="fas fa-long-arrow-alt-right"></i>
+                        →
                     </div>
                 </div>
             </div>
@@ -301,7 +301,7 @@
                         callback hell!
                     </div>
                     <div class="long1 long">
-                        <i class="fas fa-long-arrow-alt-right"></i>
+                        →
                     </div>
                 </div>
                 <div class="vue">
@@ -324,7 +324,7 @@
                         to callback hell!
                     </div>
                     <div class="long2 long">
-                        <i class="fas fa-long-arrow-alt-right"></i>
+                        →
                     </div>
                 </div>
                 <div class="vue">
@@ -346,8 +346,29 @@
                         while the other put us on the road to callback hell!
                     </div>
                     <div class="long3 long">
-                        <i class="fas fa-long-arrow-alt-right"></i>
+                        →
                     </div>
+                </div>
+            </div>
+            <div class="see">
+                SEE ALL LATEST ARTICLES→
+            </div>
+            <div class="meet">
+                <div class="june">
+                    JUNE 2020 • SHIPPING NOW
+                </div>
+                <div class="click">
+                    Meet “Click!”: Encourage Clicks Without Shady Tricks
+                </div>
+                <div class="our2">
+                    Our new book on how to boost business KPIs, build trust and address doubts effectively — without
+                    alienating people along the way. By Paul Boag.
+                </div>
+                <button class="bjump">
+                    Jump to table of contents →
+                </button>
+                <div class="june-img">
+                    <img src="https://www.smashingmagazine.com/images/books/click__homepage-illustration.svg" alt="">
                 </div>
             </div>
         </div>
