Finish class=meow

--- a/SMASH.html
+++ b/SMASH.html
@@ -371,6 +371,72 @@
                     <img src="https://www.smashingmagazine.com/images/books/click__homepage-illustration.svg" alt="">
                 </div>
             </div>
+            <div class="frame">
+                <div class="works">
+                    <div class="work1">
+                        A SMASHING GUIDE TO
+                    </div>
+                    <div class="work2">
+                        <a href="#">JavaScript & Frameworks</a>
+                    </div>
+                    <div class="work3">
+                        React, Vue, or perhaps the lightweight Alpine.js? Whether you are an experienced JavaScript
+                        developer working with one of these frameworks, or just starting to learn, our authors have
+                        created some tutorials for you.
+                    </div>
+                    <button class="bexplore">Explore JavaScript & Frameworks</button>
+                </div>
+                <div class="works">
+                    <div class="work1">
+                        A SMASHING GUIDE TO
+                    </div>
+                    <div class="work22">
+                        <a href="#">CSS Layout</a>
+                    </div>
+                    <div class="work3">
+                        CSS Layout has been transformed the lightweight Alpine.js? Whether you are an experienced
+                        JavaScript developer working with one of these frameworks, or just starting to learn, our
+                        authors have created some tutorials for you these guides can help.
+                    </div>
+                    <button class="bexplore2">Explore CSS Layout</button>
+                </div>
+            </div>
+            <div class="frame2">
+                <div class="works">
+                    <div class="work1">
+                        A SMASHING GUIDE TO
+                    </div>
+                    <div class="work23">
+                        <a href="#">Web Performance</a>
+                    </div>
+                    <div class="work3">
+                        Ensuring your site loads quickly is important. has been transformed the lightweight Alpine.js?
+                        Whether you are an experienced JavaScript developer working with one of these frameworks, or
+                        just starting to learn, our authors have created some tutorials for you these guides can help
+                        and keep it fast.
+                    </div>
+                    <button class="bexplore3">Explore Performance</button>
+                </div>
+                <div class="meow">
+                    <div class="meow1">
+                        <img src="https://www.smashingmagazine.com/images/events/ny20.png" alt="">
+                    </div>
+                    <div class="meow2">
+                        <a href="#">Email Newsletter</a>
+                    </div>
+                    <div class="meow3">
+                        Every Tuesday, we send an email newsletter with useful techniques on front-end & UX. Subscribe
+                        and get a freebie: Smart Interface Design Checklists PDF — right in your inbox. 🔮
+                    </div>
+                    <form action="" class="meow4">
+                        <input type="text" placeholder="Your email">
+                        <button class="search-meow">Meow!</button>
+                    </form>
+                    <div class="meow5">
+                        Front-end, UX and design. 1× a week. You can always unsubscribe with just 1 click.
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
