Finish class=design

--- a/SMASH.html
+++ b/SMASH.html
@@ -437,6 +437,29 @@
                     </div>
                 </div>
             </div>
+            <div class="see">
+                SEE ALL GUIDES→
+            </div>
+            <div class="design">
+                <div class="book">
+                    <img src="https://res.cloudinary.com/indysigner/image/upload/v1542959380/shop/design-systems-hardcover-book.png"
+                        alt="">
+                </div>
+                <div class="system">
+                    <div class="system1">
+                        FEATURED SMASHING BOOK
+                    </div>
+                    <div class="system2">
+                        <a href="#">Design Systems</a>
+                    </div>
+                    <div class="system3">
+                        Meet Design Systems, a recent Smashing book in which Alla Kholmatova explores how to set up an
+                        effective design system to create great digital products. With common traps, gotchas and lessons
+                        learned.
+                    </div>
+                    <button class="system4">Jump to table of contents ↬</button>
+                </div>
+            </div>
         </div>
     </div>
 </body>
