Finish class=umar

--- a/SMASH.html
+++ b/SMASH.html
@@ -461,6 +461,131 @@
                 </div>
             </div>
         </div>
+        <div class="person">
+            <div class="person-img">
+                <img src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/8ada09e5-46e1-40fb-bdb4-47963e30c4bd/elliot-jay-stocks-opt.png"
+                    alt="">
+            </div>
+            <div class="person-text">
+                <h2>PERSON OF THE WEEK</h2>
+                <p>Elliot Jay Stocks’ 15-year career as a designer and design leader started in the early days of web
+                    design, before expanding to web, app, print, and branding projects for clients such as Microsoft,
+                    Virgin, InVision, and MailChimp. He was previously the co-founder of the lifestyle magazine Lagom
+                    and is known in typographic circles thanks to his time as Creative Director of Adobe Typekit. Elliot
+                    shares his knowledge in workshops and as a speaker at design and tech conferences around the world.
+                    Thank you for everything you do for the community, dear Elliot!</p>
+            </div>
+        </div>
+        <div class="umar">
+            <div class="umar1">
+                <div class="umar-img">
+                    <img src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/a10a284b-4939-48ef-9fbb-cc725029f02c/umar-hansa-100px-opt.png"
+                        alt="">
+                </div>
+                <div class="umar-text">
+                    <div class="text1">
+                        <a href="#">Umar Hansa</a>wrote
+                    </div>
+                    <div class="text2">
+                        Recording Tests In DevTools
+                    </div>
+                    <div class="text3">
+                        november 27, 2020 — Umar Hansa summarized <a href="#">how to record tests with the puppeteer
+                            recorder</a> in Chrome DevTools. Helpful for scaffolding out code which would otherwise be
+                        tedious to write.
+                    </div>
+                </div>
+            </div>
+            <div class="umar1">
+                <div class="umar-img">
+                    <img src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/5935aa53-9de4-43f1-a6f8-0fd3ff5339e7/hugo-giraudel-100px-opt.png"
+                        alt="">
+                </div>
+                <div class="umar-text">
+                    <div class="text1">
+                        <a href="#">Hugo Giraudel</a>wrote
+                    </div>
+                    <div class="text2">
+                        Hugo Giraudel shares a great
+                    </div>
+                    <div class="text3">
+                        november 27, 2020 — Hugo Giraudel shares a great Hansa summarized <a href="#">write-up</a> in Chrome DevTools. Helpful for scaffolding out code which would otherwise reduced data usage, reduced transparency, or basically anything else in React with React hooks.
+                    </div>
+                </div>
+            </div>
+            <div class="umar1">
+                <div class="umar-img">
+                    <img src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/d86c5068-54ea-4e0a-9188-8a40edad006d/josh-w-comeau-opt.png"
+                        alt="">
+                </div>
+                <div class="umar-text">
+                    <div class="text1">
+                        <a href="#">Josh W.Comeo</a>wrote
+                    </div>
+                    <div class="text2">
+                        Operator Lookup
+                    </div>
+                    <div class="text3">
+                        november 27, 2020 — Do you need to look up a JavaScript operator? Josh W. Comeau’s <a href="#">Operator Lookup</a> in Chrome DevTools. Helpful for scaffolding out code which would otherwise is here to help: Enter an operator to get a concise summary of what it does.
+                    </div>
+                </div>
+            </div>
+            <div class="umar1">
+                <div class="umar-img">
+                    <img src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/636b7beb-16da-46b9-a636-398370d6f6cf/mark-abeto-opt.png"
+                        alt="">
+                </div>
+                <div class="umar-text">
+                    <div class="text1">
+                        <a href="#">Mark Ambeto</a>wrote
+                    </div>
+                    <div class="text2">
+                        JavaScript Interview Questions
+                    </div>
+                    <div class="text3">
+                        november 27, 2020 — A good start to check where you stand in terms of JavaScript: Mark Abeto compiled  <a href="#">70 JavaScript interview questions</a> in Chrome DevTools. Helpful for scaffolding out code which would otherwise for you to solve.
+                    </div>
+                </div>
+            </div>
+            <div class="umar1">
+                <div class="umar-img">
+                    <img src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/27690b41-dc6e-4c51-bd68-7783369286c2/geoff-graham-opt.png"
+                        alt="">
+                </div>
+                <div class="umar-text">
+                    <div class="text1">
+                        <a href="#">Geoff Graham</a>wrote
+                    </div>
+                    <div class="text2">
+                        Complete Guide To CSS Gradients
+                    </div>
+                    <div class="text3">
+                        november 27, 2020 — CSS allows you to control every aspect <a href="#">complete guide to CSS gradients</a> in Chrome DevTools. Helpful for scaffolding out code which would colors and how they transition from one to another
+                    </div>
+                </div>
+            </div>
+            <div class="umar1">
+                <div class="umar-img">
+                    <img src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/50e3d209-51ed-4c65-9d2f-6e67dddc74e0/javier-cuello-opt.png"
+                        alt="">
+                </div>
+                <div class="umar-text">
+                    <div class="text1">
+                        <a href="#">Javier Cuello</a>wrote
+                    </div>
+                    <div class="text2">
+                        Design Good Practices
+                    </div>
+                    <div class="text3">
+                        november 27, 2020 —  For his project “Design Good Practices” <a href="#">“Design Good Practices”</a> in Chrome DevTools. Helpful for scaffolding out code which would otherwise be
+                        tedious to write.
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="see">
+            MORE LINKS ON TWITTER→
+        </div>
     </div>
 </body>
 
